add thumbnail and background image
